[package]
name = "multus-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kube = { version = "0.98", features = ["runtime"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
dotenv = "0.15"
